--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./front-end/style.css">
   <title>Document</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -104,8 +104,8 @@
       </form>
     </div>
   </section>
-  <script src="script.js"></script>
-  <script src="index.js"></script>
+  <script src="/front-end/script.js"></script>
+  <script src="/front-end/index.js"></script>
 </body>
 
 </html>
